--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ img {
 }
 
 .topBar a {
-    float: left;
+    float: right;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -42,7 +42,7 @@ img {
 }
 
 @media screen and (min-width: 0px) {
-    .topBar a:not(:first-child) {display: none;}
+    .topBar a:not(:last-child) {display: none;}
     .topBar a.icon {
         float: right;
         display: block;
@@ -50,7 +50,7 @@ img {
 }
 
 @media screen and (min-width: 601px) {
-    .topBar a:not(:first-child) {display: block;}
+    .topBar a:not(:last-child) {display: block;}
     .topBar a.icon {
         display: none;
     }
