--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,22 @@ img {
     display: block;
     text-align: left;
 }
+
+/* Footer styles*/
+.footer {
+    background-color: #222222;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
+}
+
+.footerLogo {
+    display: flex;
+}
+
+.footerLinks a {
+    display: flex;
+    text-decoration: none;
+    color: white;
+}
