Issue #5: fixed css

--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ img {
     background-color: #222222;
     color: white;
     bottom: 0;
-    width: 100%;
-    padding: 20px;
+    width: auto;
+    padding: 1rem;
 }
 
 .footerLogo {
