--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,53 @@ img {
 .container {
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 1rem;
+}
+
+/* Cards */
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.recipeCard {
+    width: 100%;
+    margin: 0.5rem;
+    background-color: lightgrey;
+    padding: 1rem;
+    box-sizing: border-box;
+}
+
+.recipeCard img {
+    width: 100%;
+}
+
+.cardFooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: self-end;
+}
+
+.iconContainer {
+    display: flex;
+    gap: 0.5rem;
+    margin: 0.5rem;
+}
+
+.fa {
+    cursor: pointer;
+    user-select: none;
+}
+
+.greenChoice {
+    color: #40A578;
+}
+
+.fa-heart {
+    color:red;
 }
 
 /* Section styling */
@@ -89,6 +135,10 @@ img {
     .logo {
         display: flex;
         margin: 3rem 0 0 3rem;
+    }
+
+    .recipeCard {
+        width: calc(33.33% - 20px);
     }
 }
 
