--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
 img {
     max-width: 100%;
 }
@@ -18,6 +20,7 @@ img {
 }
 
 .logo .title {
+    font-size: clamp(2rem, 2vw, 2.65rem);
     padding-left: 0.5rem;
 }
 
@@ -163,6 +166,7 @@ img {
 
 /* Section styling */
 .sectionTitle {
+    font-size: clamp(1.75rem, 2vw, 2.1rem);
     display: flex;
     justify-content: center;
 }
