#21: Larger icons on the first page

--- a/styles.css
+++ b/styles.css
@@ -157,11 +157,11 @@ img {
 }
 
 .greenChoice {
-    color: #40A578;
+    color: #586f6b;
 }
 
 .fa-heart {
-    color:red;
+    color: #e5383b;
 }
 
 /* Section styling */
