--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ img {
     display: none;
 }
 
-.topBar a:not(:last-child) {display: none;}
+.topBar a {display: none;}
 
 .topBar a.icon {
     float: right;
@@ -333,6 +333,7 @@ ol.howList li::before {
     font-style: italic;
 }
 
+
 .textIntro {
     font-weight: 400;
     font-style: italic;
@@ -342,6 +343,17 @@ ol.howList li::before {
 .articleContainer h1 {
     text-align: center;
     padding: 0.5rem;
+}
+
+/* Categories pages styles */
+.category {
+    display: none;
+}
+
+.category.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Forms */
@@ -425,14 +437,16 @@ label {
     text-decoration: none;
 }
 
-.addButton span {
+.addButton span,
+.goToButton span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
 }
 
-.addButton span:after {
+.addButton span:after,
+.goToButton span:after {
     content: '\00bb';
     position: absolute;
     opacity: 0;
@@ -441,18 +455,55 @@ label {
     transition: 0.5s;
 }
 
-.addButton:hover span {
+.addButton:hover span,
+.goToButton:hover span {
     padding-right: 1.5rem;
 }
 
-.addButton:hover span:after {
+.addButton:hover span:after,
+.goToButton:hover span:after {
     opacity: 1;
     right: 0;
 }
 
-.addButton:focus {
+.addButton:focus,
+.goToButton:focus {
     outline: 2px solid #FFFFFF;
     outline-offset: 4px;
+}
+
+.goToButton {
+    display: inline-block;
+    border-radius: 1rem;
+    background-color: #EAF4F4;
+    box-shadow: 0 0.25rem 0.5rem rgba(111, 138, 102, 1);
+    color: 	#222222;
+    text-align: center;
+    font-size: clamp(1.1rem, 2vw, 1.5rem);
+    padding: 1.5rem;
+    width: auto;
+    max-width: 12rem;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 0.5rem;
+    text-decoration: none;
+}
+
+.tag {
+    background-color: #CCE3DE;
+    border-radius: 1rem;
+    cursor: pointer;
+    text-decoration: none;
+    box-shadow: 0 0 0.625rem 0 rgba(164, 195, 178, 1);
+    color: 	#222222;
+    font-size: clamp(1rem, 1vw, 1.2rem);
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 1px solid #A4C3B2;
+}
+
+.tag:hover {
+    background-color: #6B9080;
 }
 
 /* Message classes*/
@@ -489,13 +540,15 @@ label {
 
 .footerLogo {
     display: flex;
-    margin-right: 3rem;
+    margin-right: 2rem;
     padding-right: 1rem;
-    font-size: clamp(1.1rem, 2vw, 1.3rem)
+    font-size: clamp(1.1rem, 2vw, 1.3rem);
+    text-decoration: none;
+    color: white;
 }
 
 .footerLogo img {
-    margin: 1rem 0.5rem 0 1rem;
+    margin: 1rem 0.1rem 0 0;
 }
 
 .footerLinks {
@@ -539,7 +592,7 @@ label {
         padding-right: 5rem;
     }
 
-    .topBar a:not(:last-child) {display: block;}
+    .topBar a {display: block;}
     .topBar a.icon {
         display: none;
     }
@@ -547,6 +600,11 @@ label {
     .logo {
         display: flex;
         margin: 3rem 0 0 3rem;
+    }
+
+    .tag {
+        margin: 1rem;
+        padding: 1rem;
     }
 
     .recipeCard  {
